WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275635
[Navigation] NavigateEvent.intercept should not stop traversals
https://bugs.webkit.org/show_bug.cgi?id=275635
Summary
[Navigation] NavigateEvent.intercept should not stop traversals
Patrick Griffis
Reported
2024-06-18 15:30:20 PDT
The spec actually ignores the return value:
https://html.spec.whatwg.org/multipage/browsing-the-web.html#updating-the-traversable:fire-a-traverse-navigate-event
There is another place that the return value is used but we don't currently dispatch that one.
Attachments
Add attachment
proposed patch, testcase, etc.
Patrick Griffis
Comment 1
2024-06-18 15:51:29 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29953
EWS
Comment 2
2024-06-19 10:00:41 PDT
Committed
280179@main
(bc380e0d1d19): <
https://commits.webkit.org/280179@main
> Reviewed commits have been landed. Closing PR #29953 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-06-19 10:01:19 PDT
<
rdar://problem/130158038
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug